--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-    <h1>NYOBA DOANG BISA APA KAGAK NGODING</h1>
-    <img src="moonfall.png" alt="image"heigth="50%" width="50%"> 
-</body>
+<html>
+    <head>
+        <title>project bie</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- navigation bar -->
+<div class="container-navbar">
+<ul class="ul-navbar">
+    <li class="li-navbar">HOME</li>
+    <li class="li-navbar">ABOUT ME</li>
+    <li class="li-navbar">CONTACT ME</li>
+</ul>
+</div>
+        <!-- navigatio bar selesai -->
+
+        <!-- content 1 -->
+<div class="container-content">
+<img src="stadion.jpg" class="img-content" />
+</div>
+        <!-- content 1 selesai -->
+
+        <!-- footer -->
+<div class="container-footer">
+<h1 class="h1-footer">stadion AZ Alkmaar</h1>
+</div>
+        <!-- footer selesai -->
+    </body>
 </html>
